--- a/style.css
+++ b/style.css
@@ -3,13 +3,22 @@ body {
 }
 #counter {
   font-size: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.container {
-  display: grid;
-  width: 100%;
-  height: 100vh;
-  align-content: center;
+#container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#containerButtons {
+  display: flex;
+  width: 50%;
+  height: 500vh;
+  align-items: center;
   justify-items: center;
 }
 
